--- a/style.css
+++ b/style.css
@@ -1,11 +1,36 @@
-/* body {
+body {
   display: flex;
-} */
+  font-family: "Roboto", sans-serif;
+  flex-direction: column;
+  padding: 0%;
+  margin: 0;
+}
+
+div#hero {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+  background-color: #1f2937;
+}
 
 header {
   display: flex;
+  justify-content: space-around;
+  gap: 800px;
+  color: #f9faf8;
+  font-size: 24px;
+  font-weight: bold;
 }
 
 ul {
-  align-self: flex-end;
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+  list-style-type: none;
+}
+
+a {
+  text-decoration: none;
+  color: #e5e7eb;
+  font-size: 18px;
 }
