--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ a {
   overflow-wrap: break-word;
 }
 
-button {
+#sign-up-button {
   border-radius: 8px;
   background-color: #3882f6;
   color: #f9faf8;
@@ -133,3 +133,43 @@ q::after {
 q::before {
   content: none !important;
 }
+
+/* call to action section */
+
+#call-to-action {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 550px;
+}
+
+#call-to-action-box {
+  display: flex;
+  border: 1px solid #3882f6;
+  background-color: #3882f6;
+  width: 1200px;
+  height: 175px;
+  justify-content: space-around;
+  align-items: center;
+  border-radius: 12px;
+}
+
+#call-to-action-text {
+  color: #f9faf8;
+}
+
+.cta-button {
+  border: 2px solid white;
+  border-radius: 10px;
+  color: white;
+  background-color: #3882f6;
+  font-size: 18px;
+  padding: 12px 28px;
+  text-align: center;
+  height: 40px;
+  width: 150px;
+  padding: 0;
+  font-weight: bold;
+}
+
+/* footer */
